Added bodyparser to package.json

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "dependencies" : {
-    "express" : ">1.0"
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": ">1.0"
   },
   "author": "Paul Sebi",
   "license": "ISC",
